--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "runQuery": "babel-node ./src/utils/runQuery"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.7",
     "express": "~4.16.1",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.2",
     "morgan": "~1.9.1",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.3"
   },
   "devDependencies": {
