Working login/register

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,10 @@
   },
   "parserOptions": {
     "ecmaVersion": 2018,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
   "rules": {
     "indent": ["warn", 2],
