--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.2",
     "morgan": "~1.9.1",
     "passport": "^0.5.2",
+    "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "swagger-jsdoc": "^6.2.1",
