--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connect-redis": "^6.1.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
