--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
