--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-ensure-login": "^0.1.1",
-    "connect-pg-simple": "^7.0.0",
     "connect-redis": "^6.1.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -27,11 +26,9 @@
     "ejs": "^3.1.7",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
-    "express-session": "^1.17.2",
+    "google-auth-library": "^8.1.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
-    "passport": "^0.5.2",
-    "passport-google-oidc": "^0.1.0",
-    "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "redis": "^4.2.0",
     "swagger-jsdoc": "^6.2.1",
