--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.3",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.34.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
